Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33970

Assertion `!m.first->second.is_bulk_insert()' failed in dberr_t trx_undo_report_row_operation(que_thr_t*, dict_index_t*, const dtuple_t*, const upd_t*, ulint, const rec_t*, const rec_offs*, roll_ptr_t*)

    XMLWordPrintable

Details

    Description

      --source include/have_partition.inc
      --source include/have_innodb.inc
       
      SET autocommit=0;
      SET @@unique_checks=0;
      SET @@foreign_key_checks=0;
      CREATE TABLE t(c1 INT,c2 CHAR) ENGINE=INNODB PARTITION BY KEY(c1) PARTITIONS 2;
      INSERT INTO t VALUES(2,0);
      DELETE FROM t;
      

      Leads to

      10.11.8 0271517495e28b91d8e1fedf8900559854ce5b71 (Debug)

      mariadbd: /test/server/storage/innobase/trx/trx0rec.cc:1852: dberr_t trx_undo_report_row_operation(que_thr_t*, dict_index_t*, const dtuple_t*, const upd_t*, ulint, const rec_t*, const rec_offs*, roll_ptr_t*): Assertion `!m.first->second.is_bulk_insert()' failed.
      

      10.11.8 0271517495e28b91d8e1fedf8900559854ce5b71 (Debug)

      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x000055f7e0c6b208 in my_write_core (sig=sig@entry=6) at /test/server/mysys/stacktrace.c:424
      #2  0x000055f7e05275cb in handle_fatal_signal (sig=6) at /test/server/sql/signal_handler.cc:357
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
      #5  0x000014b7376a8859 in __GI_abort () at abort.c:79
      #6  0x000014b7376a8729 in __assert_fail_base (fmt=0x14b73783e588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55f7e10f8ea8 "!m.first->second.is_bulk_insert()", file=0x55f7e10f84b8 "/test/server/storage/innobase/trx/trx0rec.cc", line=1852, function=<optimized out>) at assert.c:92
      #7  0x000014b7376b9fd6 in __GI___assert_fail (assertion=assertion@entry=0x55f7e10f8ea8 "!m.first->second.is_bulk_insert()", file=file@entry=0x55f7e10f84b8 "/test/server/storage/innobase/trx/trx0rec.cc", line=line@entry=1852, function=function@entry=0x55f7e10f8de8 "dberr_t trx_undo_report_row_operation(que_thr_t*, dict_index_t*, const dtuple_t*, const upd_t*, ulint, const rec_t*, const rec_offs*, roll_ptr_t*)") at assert.c:101
      #8  0x000055f7e0a5b63a in trx_undo_report_row_operation (thr=thr@entry=0x14b700062830, index=index@entry=0x14b70019d3b0, clust_entry=clust_entry@entry=0x14b70018d750, update=update@entry=0x0, cmpl_info=cmpl_info@entry=0, rec=rec@entry=0x14b73684407e "", offsets=0x14b734349860, roll_ptr=0x14b734349488) at /test/server/storage/innobase/include/trx0trx.h:488
      #9  0x000055f7e0ac0ba8 in btr_cur_del_mark_set_clust_rec (block=0x14b73675de50, rec=0x14b73684407e "", index=index@entry=0x14b70019d3b0, offsets=offsets@entry=0x14b734349860, thr=thr@entry=0x14b700062830, entry=0x14b70018d750, mtr=0x14b734349d20) at /test/server/storage/innobase/btr/btr0cur.cc:4455
      #10 0x000055f7e0a24572 in row_upd_del_mark_clust_rec (mtr=0x14b734349d20, foreign=false, referenced=false, thr=0x14b700062830, offsets=0x14b734349860, index=0x14b70019d3b0, node=0x14b70003f770) at /test/server/storage/innobase/row/row0upd.cc:2515
      #11 row_upd_clust_step (node=node@entry=0x14b70003f770, thr=thr@entry=0x14b700062830) at /test/server/storage/innobase/row/row0upd.cc:2657
      #12 0x000055f7e0a260fb in row_upd (thr=0x14b700062830, node=0x14b70003f770) at /test/server/storage/innobase/row/row0upd.cc:2779
      #13 row_upd_step (thr=thr@entry=0x14b700062830) at /test/server/storage/innobase/row/row0upd.cc:2921
      #14 0x000055f7e09c6e27 in row_update_for_mysql (prebuilt=0x14b70003ed80) at /test/server/storage/innobase/row/row0mysql.cc:1684
      #15 0x000055f7e08487d1 in ha_innobase::delete_row (this=0x14b70003c5c0, record=0x14b70019e610 "\371\002") at /test/server/storage/innobase/handler/ha_innodb.cc:8716
      #16 0x000055f7e053b439 in handler::ha_delete_row (this=0x14b70003c5c0, buf=buf@entry=0x14b70019e610 "\371\002") at /test/server/sql/handler.cc:7855
      #17 0x000055f7e07cc9c3 in ha_partition::delete_row (this=0x14b70019ea80, buf=0x14b70019e610 "\371\002") at /test/server/sql/ha_partition.cc:4877
      #18 0x000055f7e053b439 in handler::ha_delete_row (this=0x14b70019ea80, buf=0x14b70019e610 "\371\002") at /test/server/sql/handler.cc:7855
      #19 0x000055f7e01f0d3b in TABLE::delete_row (this=0x14b70018bcc8) at /test/server/sql/sql_delete.cc:292
      #20 0x000055f7e01ef149 in mysql_delete (thd=thd@entry=0x14b700000db8, table_list=0x14b700015298, conds=<optimized out>, order_list=order_list@entry=0x14b700005b88, limit=18446744073709551615, options=<optimized out>, result=<optimized out>) at /test/server/sql/sql_delete.cc:858
      #21 0x000055f7e024868e in mysql_execute_command (thd=thd@entry=0x14b700000db8, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false) at /test/server/sql/sql_limit.h:94
      #22 0x000055f7e023417d in mysql_parse (thd=thd@entry=0x14b700000db8, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x14b73434b2c0) at /test/server/sql/sql_parse.cc:8126
      #23 0x000055f7e02416c1 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x14b700000db8, packet=packet@entry=0x14b70009aae9 "DELETE FROM t", packet_length=packet_length@entry=13, blocking=blocking@entry=true) at /test/server/sql/sql_class.h:1397
      #24 0x000055f7e0243d82 in do_command (thd=0x14b700000db8, blocking=blocking@entry=true) at /test/server/sql/sql_parse.cc:1407
      #25 0x000055f7e03a9a8d in do_handle_one_connection (connect=<optimized out>, connect@entry=0x55f7e2c4ecd8, put_in_cache=put_in_cache@entry=true) at /test/server/sql/sql_connect.cc:1415
      #26 0x000055f7e03a9f5c in handle_one_connection (arg=0x55f7e2c4ecd8) at /test/server/sql/sql_connect.cc:1317
      #27 0x000014b737bb9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #28 0x000014b7377a5133 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.11.8 (dbg)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.4.34 (dbg), 10.4.34 (opt), 10.5.25 (dbg), 10.5.25 (opt), 10.6.18 (dbg), 10.6.18 (opt), 10.11.8 (opt), 11.0.6 (dbg), 11.0.6 (opt), 11.1.5 (dbg), 11.1.5 (opt), 11.2.4 (dbg), 11.2.4 (opt), 11.3.3 (dbg), 11.3.3 (opt), 11.4.2 (dbg), 11.4.2 (opt), 11.5.0 (dbg), 11.5.0 (opt)

      Attachments

        Activity

          People

            thiru Thirunarayanan Balathandayuthapani
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: