MDEV-33970  Assertion `!m.first->second.is_bulk_insert()' failed in trx_undo_report_row_operation()

In case of partition insert, InnoDB fails to end the bulk insert
for one of the partition. It leads to bulk insert operation for
the consecutive delete statement.

trx_t::bulk_insert_apply_for_table(): Irrespective of bulk insert
value, InnoDB should end the bulk insert for the table.